[package]
name = "hecto_drive"
version = "0.0.1"
edition = "2021"
authors = ["Hector Bennett <contact@hectorbennett.com>"]
license = "ISC"

description = "A simple gain plugin with a webview GUI"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
    "standalone",
] }
nih_plug_webview = { git = "https://github.com/maxjvh/nih-plug-webview.git" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
